Addressed Apoorv's round 2 comments